syntax = "proto3";

package  sec06;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.kensbunker.models.sec06";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountsResponse {
  repeated AccountBalance accounts = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {

}

service BankService {
  // unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountsResponse);

  // streaming
  rpc Withdraw(WithdrawRequest) returns (stream Money);

}